vpc.tf
resource "aws_vpc" "main" { # W: VPC Flow Logs is not enabled for VPC
    cidr_block = "10.0.0.0/16"
  }

  resource "aws_subnet" "private_subnet" {
    vpc_id     = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
  }

  resource "aws_vpc_endpoint" "s3" {
    vpc_id            = aws_vpc.main.id
    service_name      = "com.amazonaws.${var.region}.s3"
    vpc_endpoint_type = "Gateway"
    route_table_ids   = [aws_vpc.main.main_route_table_id]
  }

resource "aws_security_group" "lambda_sg" { # I: Security group explicitly uses the default description.
    name   = "lambda_sg"
    vpc_id = aws_vpc.main.id

   egress { # I: Security group rule does not have a description.
      from_port       = 443
      to_port         = 443
      protocol        = "tcp"
      prefix_list_ids = [aws_vpc_endpoint.s3.prefix_list_id]
    }
  }

 resource "aws_network_acl" "private_nacl" {
    vpc_id     = aws_vpc.main.id
    subnet_ids = [aws_subnet.private_subnet.id]

    egress {
      rule_no    = 100
      protocol   = "6"
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 443
      to_port    = 443
    }

    egress {
      rule_no    = 110
      protocol   = "6"
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 1024
      to_port    = 65535
    }

    ingress {
      rule_no    = 100
      protocol   = "6"
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 443
      to_port    = 443
    }

    ingress {
      rule_no    = 110
      protocol   = "6"
      action     = "allow"
      cidr_block = "0.0.0.0/0"
      from_port  = 1024
      to_port    = 65535
    }

    # Deny everything else
    ingress {
      rule_no    = 200
      protocol   = "-1"
      action     = "deny"
      cidr_block = "0.0.0.0/0"
      from_port  = 0
      to_port    = 0
    }

    egress {
      rule_no    = 200
      protocol   = "-1"
      action     = "deny"
      cidr_block = "0.0.0.0/0"
      from_port  = 0
      to_port    = 0
    }
  }
